demo fixes for dumb browsers

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -74,15 +74,15 @@
 
     <script src="../vendor/jquery.min.js"></script>
     <script src="uubench.js"></script>
+    <script src="../lib/dust.js"></script>
     <script src="../lib/parser.js"></script>
     <script src="../lib/compiler.js"></script>
-    <script src="../lib/dust.js"></script>
     <script src="suites/dust_suite.js"></script>
     <script src="suites/mustache_suite.js"></script>
     <script src="suites/handlebars_suite.js"></script>
     <script src="suites/jquery_suite.js"></script>
     <script src="http://github.com/wycats/handlebars.js/raw/master/lib/handlebars.js"></script>
-    <script src="http://github.com/janl/mustache.js/raw/master/mustache.js"</script>
+    <script src="http://github.com/janl/mustache.js/raw/master/mustache.js"></script>
     <script src="http://github.com/jquery/jquery-tmpl/raw/master/jquery.tmpl.js"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
