--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -74,9 +74,7 @@
 
     <script src="../vendor/jquery.min.js"></script>
     <script src="uubench.js"></script>
-    <script src="../lib/dust.js"></script>
-    <script src="../lib/parser.js"></script>
-    <script src="../lib/compiler.js"></script>
+    <script src="../dist/dust-full-0.0.1.min.js"></script>
     <script src="suites/dust_suite.js"></script>
     <script src="suites/mustache_suite.js"></script>
     <script src="suites/handlebars_suite.js"></script>
