--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ code .keyword              { font-weight: bold; color: #dd7522 }
 code .string, code .regexp { color: #669933 }
 code .class, code .special {  }
 code .number               { color: #eddd3d }
-code .comment              { color: grey }</style><script src="vendor/ecma.js"></script><script src="vendor/jquery.min.js"></script><script src="vendor/jsdump.js"></script><script src="vendor/beautify.js"></script><script src="lib/dust.js"></script><script src="lib/parser.js"></script><script src="lib/compiler.js"></script><script src="test/examples.js"></script><script src="test/uutest.js"></script><script src="test/core.js"></script><script type="text/javascript">(function(){dust.register("select",body_0);function body_0(chk,ctx){return chk.write("<select style=\"clear: both;\">").section(ctx.get("examples"),ctx,{"block":body_1},null).write("</select>");}function body_1(chk,ctx){return chk.write("<option ").reference(ctx.get("selected"),ctx,"h",[]).write(" value=\"").helper("idx",ctx,{"block":body_2},null).write("\">").reference(ctx.get("name"),ctx,"h",[]).write("</option>");}function body_2(chk,ctx){return chk.reference(ctx.getPath(true,[]),ctx,"h",[]);}})();</script><script type="text/javascript">jsDump.parsers['function'] = function(fn) {
+code .comment              { color: grey }</style><script src="vendor/ecma.js"></script><script src="vendor/jquery.min.js"></script><script src="vendor/jsdump.js"></script><script src="vendor/beautify.js"></script><script src="lib/dust.js"></script><script src="lib/parser.js"></script><script src="lib/compiler.js"></script><script src="test/examples.js"></script><script src="test/uutest.js"></script><script src="test/core.js"></script><script type="text/javascript">(function(){dust.register("select",body_0);function body_0(chk,ctx){return chk.write("<select style=\"clear: both;\">").section(ctx.get("examples"),ctx,{"block":body_1},null).write("</select>");}function body_1(chk,ctx){return chk.write("<option ").reference(ctx.get("selected"),ctx,"h",[]).write(" value=\"").helper("idx",ctx,{"block":body_2},null).write("\">").reference(ctx.get("name"),ctx,"h",[]).write("</option>");}function body_2(chk,ctx){return chk.reference(ctx.getPath(true,[]),ctx,"h",[]);}return body_0;})();</script><script type="text/javascript">jsDump.parsers['function'] = function(fn) {
   return fn.toString();
 }
 
@@ -721,13 +721,13 @@ End
 
 <p>This will import everything needed to parse, compile and render templates. To render Dust templates in the browser, grab the runtime distribution and include it in your script tags along with your compiled templates:</p>
 
-<pre><code>&lt;script src="dust-core-0.2.0.min.js"&gt;&lt;/script&gt;
+<pre><code>&lt;script src="dust-core-0.2.5.min.js"&gt;&lt;/script&gt;
 &lt;script src="compiled_templates.js"&gt;&lt;/script&gt;
 </code></pre>
 
 <p>Include the full distribution if you want to compile templates within the browser (as in the online demo):</p>
 
-<pre><code>&lt;script src="dust-full-0.2.0.min.js"&gt;&lt;/script&gt;
+<pre><code>&lt;script src="dust-full-0.2.5.min.js"&gt;&lt;/script&gt;
 </code></pre>
 
 <p>Precompilation is the recommended approach for general use.</p>
@@ -913,6 +913,11 @@ dust.render("index", base.push({foo: "bar"}), function(err, out) {
 
 <p>Compiles <code>source</code> into a JavaScript template string. Registers itself under <code>name</code> when evaluated.</p>
 
+<pre><code>dust.compileFn(source, [name])
+</code></pre>
+
+<p>Compiles <code>source</code> directly into a JavaScript function that takes a context and an optional callback (see <code>dust.renderSource</code>). Registers the template under <code>name</code> if this argument is supplied.</p>
+
 <pre><code>dust.optimizers
 </code></pre>
 
@@ -956,6 +961,11 @@ stream.on("error", listener(error))
 </code></pre>
 
 <p>Registers an event listener. Streams accept a single listener for a given event.</p>
+
+<pre><code>dust.renderSource(source, context, [callback(error, output)])
+</code></pre>
+
+<p>Compiles and renders <code>source</code>, invoking <code>callback</code> on completion. If no callback is supplied this function returns a Stream object. Use this function when precompilation is not required.</p>
 
 <h4>Contexts</h4>
 
@@ -1003,7 +1013,7 @@ stream.on("error", listener(error))
 
 <p>Writes <code>data</code> to this chunk's buffer and marks it as flushable. This method <em>must</em> be called on any chunks created via <code>chunk.map</code>. Do <em>not</em> call this method on a handler's main chunk -- <code>dust.render</code> and <code>dust.stream</code> take care of this for you.</p>
 
-<pre><code>chunk.tap(function)
+<pre><code>chunk.tap(callback)
 chunk.untap()
 </code></pre>
 
