update the index.html for consistently using Dust

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <h2>Highlights!</h2>
 
-<p>Use {dust} if you want these things:</p>
+<p>Use Dust if you want these things:</p>
 
 <ul>
 <li>async/streaming operation</li>
@@ -72,7 +72,7 @@ We intend to replace the slow js eval with a expression parser soon </li>
 <li>Documentation/wiki on the best practices for using Dust</li>
 </ul><h2>Installation</h2>
 
-<p>For Linkedin {dust}</p>
+<p>For Linkedin Dust</p>
 
 <pre><code>$ npm install dustjs-linkedin
 </code></pre>
