--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Dust by linkedin</title>
+    <title>Dust by LinkedIn</title>
   </head>
 
   <body>
@@ -72,7 +72,7 @@ We intend to replace the slow js eval with a expression parser soon </li>
 <li>Documentation/wiki on the best practices for using Dust</li>
 </ul><h2>Installation</h2>
 
-<p>For Linkedin Dust</p>
+<p>For LinkedIn Dust</p>
 
 <pre><code>$ npm install dustjs-linkedin
 </code></pre>
