update the link to why we chose dust

--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
         <section id="main-content">
           <h1>Dust<a href="http://travis-ci.org/linkedin/dustjs"><img src="https://secure.travis-ci.org/linkedin/dustjs.png" alt="Build Status"></a>
 </h1>
+<h1>This is the LinkedIn fork of Dust</h1>
 
-<h2>Highlights!</h2>
+<p>Details in the blog post : 
+<a href="http://engineering.linkedin.com/frontend/leaving-jsps-dust-moving-linkedin-dustjs-client-side-templates">
+Leaving jsps in the Dust</a></p>
 
-<p>Use Dust if you want these things:</p>
+<p>We chose Dust after evaluating a host of others. Read more here :
+<a href="http://engineering.linkedin.com/frontend/client-side-templating-throwdown-mustache-handlebars-dustjs-and-more">
+Dust for client templates at LinkedIn  
+</a> </p>
+
+<p>We will gradually be extending this library with helper functions and bug fixes. </p>
+
+
+<h2>Dust Highlights!</h2>
 
 <ul>
 <li>async/streaming operation</li>
@@ -42,11 +53,7 @@
 <li>clean, low-level API</li>
 <li><a href="http://akdubya.github.com/dustjs/benchmark/index.html">high performance</a></li>
 <li>composable templates</li>
-</ul><h1>This is the LinkedIn fork of Dust</h1>
-
-<p>Details in the blog post : <a href="http://engineering.linkedin.com/frontend/leaving-jsps-dust-moving-linkedin-dustjs-client-side-templates">http://engineering.linkedin.com/frontend/leaving-jsps-dust-moving-linkedin-dustjs-client-side-templates</a></p>
-
-<p>We will gradually be extending this library with helper functions and bug fixes. </p>
+</ul>
 
 <h2>Current LinkedIn additions include:</h2>
 
