benchmark and coverage deployed.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@ Dust for client templates at LinkedIn
 <li>browser/node compatibility</li>
 <li>extended Mustache/ctemplate syntax</li>
 <li>clean, low-level API</li>
-<li><a href="http://akdubya.github.com/dustjs/benchmark/index.html">high performance</a></li>
+<li><a href="http://linkedin.github.com/dustjs/benchmark/index.html">high performance</a></li>
 <li>composable templates</li>
+</ul>
+
+<h2>Dust Coverage!</h2>
+<ul>
+  <li> Take a look to the dust coverage <a href="http://linkedin.github.com/dustjs/cover_html/index.html">here</a></li>
 </ul>
 
 <h2>Current LinkedIn additions include:</h2>
