issue 106, accessing array inside a loop using the current context

--- a/test/test.html
+++ b/test/test.html
@@ -10,7 +10,7 @@
 <script src="./dust_files/jsdump.js"></script>
 <script src="./dust_files/beautify.js"></script>
 <script src="../lib/dust.js"></script>
-<script src="../lib/dust-helpers.js"></script>
+<script src="../dustjs-helpers/lib/dust-helpers.js"></script>
 <script src="../lib/parser.js"></script>
 <script src="../lib/compiler.js"></script>
 <script src="./jasmine-test/spec/grammarTests.js"></script>
