--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@ We intend to replace the slow js eval with a expression parser soon </li>
 <li>Support dynamic blocks, similar to dynamic partials</li>
 <li>Add pipe support for node</li>
 <li>Documentation/wiki on the best practices for using Dust</li>
-</ul><h2>Installation</h2>
+</ul>
+
+<h2>Dust Tutorial</h2>
+<a href="https://github.com/linkedin/dustjs/wiki/Dust-Tutorial">Learn how dust can be used for simple to real use cases</a>
+
+<h2>Installation</h2>
 
 <p>For LinkedIn Dust</p>
 
