--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ We intend to replace the slow js eval with a expression parser soon </li>
 <li>Documentation/wiki on the best practices for using Dust</li>
 </ul>
 
-<h2>Dust Tutorial</h2>
-<a href="https://github.com/linkedin/dustjs/wiki/Dust-Tutorial">Learn how dust can be used for simple to real use cases</a>
+<h2>Dust Quick Tutorial</h2>
+<a href="https://github.com/linkedin/dustjs/wiki/Dust-Tutorial">Learn how to use dust for simple and real use cases</a>
 
 <h2>Installation</h2>
 
