Fixed :else in section when iterating over empty array.
The "No friends" 101 example from dust documentation was actually not
working

--- a/test/test.html
+++ b/test/test.html
@@ -259,6 +259,7 @@
 				<option value="25">child_template</option>
 				<option value="26">recursion</option>
 				<option value="27">comments</option>
+				<option value="28">empty_else_block</option>
 			</select></span> or write your own:
 			</p>
 			<textarea id="input-source" class="console"></textarea>
