troubleshooting section added

--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@ If the files are not there, you can generate those youself using this make targe
       </div>
     </div>
 
+<h2>Troubleshooting</h2>
+<p> are you getting this error message "beta does not have "untap" method"??</p>
+
+<p> This error occurs because you have an old version of the dustjs core installed, re-install it to fix the problem </p>
+
+<pre><code>$ npm uninstall dustjs-linkedin</code></pre>
+
+<pre><code>$ npm install</code></pre>
+
   
   </body>
 </html>
