--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@ We intend to replace the slow js eval with a expression parser soon </li>
 </ul>
 
 <h2>Dust Quick Tutorial</h2>
-<a href="https://github.com/linkedin/dustjs/wiki/Dust-Tutorial">Learn how to use dust for simple and real use cases</a>
+
+<a href="https://github.com/linkedin/dustjs/wiki/Dust-Tutorial">Learn how to use Dust</a>
+
+
 
 <h2>Installation</h2>
 
@@ -151,6 +154,13 @@ If the files are not there, you can generate those youself using this make targe
 <p>Before executing the command mentioned above, make sure that you have all the dependencies installed by running the following command on your root project folder: </p>
 
 <pre><code>$ npm install</code></pre>
+
+
+<h2>Guidelines - Contributing to Dust</h2>
+
+<a href="https://github.com/linkedin/dustjs/wiki/How-to-Contribute">If you want to contribute</a>
+
+
 
 <h2>Troubleshooting</h2>
 <p> are you getting this error message "beta does not have "untap" method"??</p>
