--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ Dust for client templates at LinkedIn
   <li> Take a look to the dust coverage <a href="http://linkedin.github.com/dustjs/cover_html/index.html">here</a></li>
 </ul>
 
-<h2>Current LinkedIn additions include:</h2>
+<h2>LinkedIn additions include:</h2>
+
+<h3>Release 1.0</h3>
 
 <ul>
 <li>Fix to peg.js to print the line and column number for syntax errors in dust templates</li>
@@ -82,6 +84,12 @@ We intend to replace the slow js eval with a expression parser soon </li>
 <li>Support dynamic blocks, similar to dynamic partials</li>
 <li>Add pipe support for node</li>
 <li>Documentation/wiki on the best practices for using Dust</li>
+</ul>
+
+<h3>Release 1.1</h3>
+
+<ul>
+  <li> TODO </li>
 </ul>
 
 <h2>Dust Quick Tutorial</h2>
@@ -156,20 +164,23 @@ If the files are not there, you can generate those youself using this make targe
 <pre><code>$ npm install</code></pre>
 
 
-<h2>Guidelines - Contributing to Dust</h2>
+<h2>Guidelines - Contributing to LinkedIn Dust</h2>
 
-<a href="https://github.com/linkedin/dustjs/wiki/How-to-Contribute">If you want to contribute</a>
+<a href="https://github.com/linkedin/dustjs/wiki/How-to-Contribute">If you love to contribute to this fork</a>
 
 
 
-<h2>Troubleshooting</h2>
-<p> are you getting this error message "beta does not have "untap" method"??</p>
+<h2>Troubleshooting Guide</h2>
 
-<p> This error occurs because you have an old version of the dustjs core installed, re-install it to fix the problem </p>
+
+<p> Are you getting this error message "beta does not have "untap" method" when running tests on dust-js helpers</p>
+
+<p> This error occurs since you have an older version of the dustjs installed, re-install it to fix the problem </p>
 
 <pre><code>$ npm uninstall dustjs-linkedin</code></pre>
 
 <pre><code>$ npm install</code></pre>
+
 </section>
 
         <aside id="sidebar">
